--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
     "lucide-react": "^0.461.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
+    "react-router-dom": "^6.28.0",
     "react-slick": "^0.30.2",
     "service-me-front-end": "file:",
-    "slick-carousel": "^1.8.1",
-    "react-icons": "^5.3.0",
-    "react-router-dom": "^6.28.0"
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
@@ -36,9 +36,7 @@
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.11.0",
     "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.14",
-    "vite": "^5.4.11"
     "tailwindcss": "^3.4.15",
-    "vite": "^5.4.10"
+    "vite": "^5.4.11"
   }
 }
